--- a/.prettierrc
+++ b/.prettierrc
@@ -14,5 +14,6 @@
   "semi": false,
   "singleQuote": true,
   "vueIndentScriptAndStyle": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "singleAttributePerLine": true
 }
