--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cursor-pool",
   "private": true,
-  "version": "1.8.4",
+  "version": "1.8.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -33,6 +33,7 @@
     "markdown-it": "^14.1.0",
     "naive-ui": "^2.41.0",
     "pinia": "^3.0.1",
+    "tauri-plugin-macos-permissions-api": "^2.2.0",
     "uuid": "^11.0.5",
     "vfonts": "^0.0.3",
     "vue": "^3.5.13",
@@ -59,6 +60,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "^3.2.5",
+    "sharp": "^0.34.1",
     "typescript": "~5.6.2",
     "unocss": "0.58.0",
     "vite": "^6.0.3",
