--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cursor-pool"
-version = "1.8.4"
+version = "1.8.5"
 description = "Cursor Pool App"
 authors = ["Cloxl"]
 edition = "2021"
@@ -48,13 +48,14 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
 tracing-appender = "0.2"
 time = { version = "0.3", features = ["formatting", "macros"] }
-tauri-plugin-notification = "2"
+tauri-plugin-macos-permissions = "2.2.0"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_System_Threading",
-    "Win32_UI_Shell"
+    "Win32_UI_Shell",
+    "Win32_UI_WindowsAndMessaging"
 ] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
