--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -114,13 +114,19 @@ jobs:
 
       - name: Build Tauri App (macOS)
         if: matrix.platform == 'macos-latest' || matrix.platform == 'macos-14'
+        env:
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
-          pnpm tauri build ${{ matrix.args }} -- --no-sign
+          pnpm tauri build ${{ matrix.args }}
 
       - name: Build Tauri App (Windows)
         if: matrix.platform == 'windows-latest'
+        env:
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
-          pnpm tauri build ${{ matrix.args }} -- --no-sign
+          pnpm tauri build ${{ matrix.args }}
 
       - name: Upload Dev Build Artifacts
         uses: actions/upload-artifact@v4
